--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,5 @@ authors = ["Hubert Jarosz <marqin.pl@gmail.com>"]
 iron = "^0.3.0"
 router = "^0.1.1"
 rustc-serialize = "^0.3.19"
+hyper = "^0.8.1"
+rust-crypto = "^0.2.36"
